from the tree search operations will be triggered in a separate window.

--- a/system/www/search.vsp.in
+++ b/system/www/search.vsp.in
@@ -46,7 +46,7 @@ if(_q <> '') {
 } else {
 	if(_id <> '') {
 				 keyword := charset_recode(_id, 'UTF-8', '_WIDE_');
-  			 filter := sprintf('FILTER(CONTAINS(LCASE(STR(?label)), LCASE("%s")))', _id);
+         filter := sprintf('FILTER(CONTAINS(LCASE(STR(?label)), LCASE("%s")))', keyword);
   } else {
          filter := '';
   }
