--- a/system/xslt/search.xsl.in
+++ b/system/xslt/search.xsl.in
@@ -43,7 +43,7 @@
       <xsl:with-param name="body">
         <section>
           <h2>Results for ‘<xsl:value-of select="$keyword" />’</h2>
-          <p><a href="/">« Return to the homepage</a></p>
+          <p><a href="/mdr/">« Return to the homepage</a></p>
           <div id="results">
             <xsl:choose>
               <xsl:when test="//rdf:type">
@@ -54,6 +54,10 @@
                 <xsl:call-template name="results">
                   <xsl:with-param name="type">DataElement</xsl:with-param>
                   <xsl:with-param name="title">Data elements</xsl:with-param>
+                </xsl:call-template>
+                <xsl:call-template name="results">
+                  <xsl:with-param name="type">Property</xsl:with-param>
+                  <xsl:with-param name="title">Attributes</xsl:with-param>
                 </xsl:call-template>
               </xsl:when>
               <xsl:otherwise>
