--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -25,7 +25,7 @@
 
   <p>The platform has mappings available for the following vocabularies:
   <ul>
-    <li><a href="/mdr/id/cv/">Core Vocabularies</a>,
+    <li><a href="/vdm/id/cv/">Core Vocabularies</a>,
 			<ul>
 				<li>
 					<a href="Core_Vocabularies_v1.1_v0.31.xlsx">Core Vocabularies Mapping Table</a>
@@ -33,20 +33,26 @@
 				<li>
 					<p>Examples of some entry points are:
 						<ul>
-							<li>the <a href="/mdr/id/cv/property/PersonFamilyName">Person Familty Name</a> property (Core Vocabularies);</li>
-							<li>the <a href="/mdr/id/cv/property/AddressPostCode">Address Post Code</a> Property;</li>
-							<li>the <a href="/mdr/id/cv/property/PersonCountryOfBirth">Person Country Of Birth</a> Property;</li>
+							<li>the <a href="/vdm/id/cv/property/PersonFamilyName">Person Familty Name</a> property (Core Vocabularies);</li>
+							<li>the <a href="/vdm/id/cv/property/AddressPostCode">Address Post Code</a> Property;</li>
+							<li>the <a href="/vdm/id/cv/property/PersonCountryOfBirth">Person Country Of Birth</a> Property;</li>
 						</ul>
 					</p>
 				</li>
 		</ul>
 		</li>
-		<li><a href="http://vocabs.tenforce.com/mdr/about/html/dcfce6b9b80785dd9ab8643040bcb443">NIEM 3.0</a></li>
-		<li><a href="http://vocabs.tenforce.com/mdr/about/html/2e68deedd01558073d0c81ae7e50710c">Stelselcatalogus</a></li>
+		<li>
+			<p>Target Vocabularies:
+				<ul>
+					<li><a href="http://vocabs.tenforce.com/vdm/about/html/dcfce6b9b80785dd9ab8643040bcb443">NIEM 3.0</a></li>
+					<li><a href="http://vocabs.tenforce.com/vdm/about/html/2e68deedd01558073d0c81ae7e50710c">Stelselcatalogus</a></li>
+				</ul>
+			</p>
+		</li>
     <li>
 			DCAT-AP Open Data Support Mappings:
 			<ul>
-				<li><a href="/mdr/id/dcat/">Browsable View</a>,</li>
+				<li><a href="/vdm/id/dcat/">Browsable View</a>,</li>
 				<li>
 					<a href="visualisation/tree.html">Tree Visualisation 
 						of the DCAT/ODS mapping</a>
