--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -92,7 +92,7 @@
   </ul>
 
   
-  <p>Or use the box below to search the core vocabulary mapping directory.</p>
+  <p>Or use the box below to search the Core Vocabulary Mapping Directory.</p>
 
   <div>
     <form id="searchform">
