--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -51,22 +51,16 @@
   <ul>
     <li><a href="http://vocabs.tenforce.com/vdm/id/cv/0b0cb2485cb9429c5df6ec01d10a3dae">Core Vocabularies</a>,
 			<ul>
-				<li>
-					<a href="Core_Vocabularies_v1.1_v0.31.xlsx">Core Vocabularies Mapping Table</a>
-				</li>
-				<li>
-					<p>Examples of some entry points are:
+				<li><a href="Core_Vocabularies_v1.1_v0.31.xlsx">Core Vocabularies Mapping Table</a></li>
+				<li>Examples of some entry points are:
 						<ul>
 							<li>the <a href="http://vocabs.tenforce.com/vdm/id/cv/5bc9674db0153b2bc6504561061629f7">Person Family Name</a> property (Core Vocabularies);</li>
 							<li>the <a href="http://vocabs.tenforce.com/vdm/id/cv/55ce4ba4dd72952de7c7b0180ff9f9e9">Address Post Code</a> Property;</li>
 							<li>the <a href="http://vocabs.tenforce.com/vdm/id/cv/5f244e4ceda0917c01ed4ebc6d28dc9e">Person Country Of Birth</a> Property;</li>
-							
 						</ul>
-					</p>
 				</li>
-				<li><a href="visualisation/cvtree.html">Tree visualisation of the core vocabulary mapping</a>
-				</li>
-		</ul>
+				<li><a href="visualisation/cvtree.html">Tree visualisation of the core vocabulary mapping</a></li>
+			</ul>
 		</li>
 		<li>
 			<p>Target Core Data Models:
