--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -20,6 +20,18 @@
   <h1>Core Vocabulary Mapping Directory</h1>
 </header>
 
+<section id="intro">
+<p>The Core Vocabulary Mapping Directory is a repository for the Core Vocabularies and the associated Core Data Models.
+The available data models and their connecting mappings can be explored by browsing through the Directory. 
+Also a visual expandeable Tree overview starting from the Core Vocabularies is available. The last possibility to explore 
+and reuse the information is via the SPARQL endpoint for machine readeable access.
+</p>
+<P>The <a href="https://joinup.ec.europa.eu/site/core_vocabularies/Core_Vocabularies_user_handbook/Handbook-for-using-the-Core-Vocabularies_v0.50.pdf">Core Vocabularies handbook</a> 
+  provides more insight in the usage and objectives of the Core Vocabularies. 
+  Also visit the <a href="https://joinup.ec.europa.eu/asset/core_vocabularies/asset_release/core-vocabularies-v11">Core Vocabularies homepage</a> for more background information.
+  </P>
+</section>
+
 <section id="creation">
   <h2>Creating a mapping</h2>
   <P>
@@ -35,13 +47,8 @@
       </ol>
   </P>
   <P>After submission the document will be iterative refined in collaboration
-  </P?
-     
-  
-  <P>The <a href="https://joinup.ec.europa.eu/site/core_vocabularies/Core_Vocabularies_user_handbook/Handbook-for-using-the-Core-Vocabularies_v0.50.pdf">Core Vocabularies handbook</a> 
-  provides more insight in the usage and objectives of the Core Vocabularies. 
-  Also visit the <a href="https://joinup.ec.europa.eu/asset/core_vocabularies/asset_release/core-vocabularies-v11">Core Vocabularies homepage</a> for more background information.
   </P>
+  
 </section>
 
 <section id="registry">
@@ -84,8 +91,8 @@
 			</ul>
 		</li>
   </ul>
-
-  
+</section>
+  <section id="search">
   <p>Or use the box below to search the Core Vocabulary Mapping Directory.</p>
 
   <div>
