--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -30,26 +30,13 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
   provides more insight in the usage and objectives of the Core Vocabularies. 
   Also visit the <a href="https://joinup.ec.europa.eu/asset/core_vocabularies/asset_release/core-vocabularies-v11">Core Vocabularies homepage</a> for more background information.
   </P>
+  
+<P>
+  <a href="#creation>How to contribute</a> | <a href="#registry">Browse the directory</a> | <a href="#search">Search for concept</a> | <a href="/sparql">SPARQL endpoint</a>
+  </P> 
 </section>
 
-<section id="creation">
-  <h2>Creating a mapping</h2>
-  <P>
-  Contributing information to the Core Vocabulary Mapping Directory starts from providing 
-  a mapping of between the Core Vocabularies and the newly targeted Core Data Model.
-  </P>
-  <P>This consists of four steps
-      <ol>
-        <li>download the mapping template document <a href="xxx">here</a>. </li>
-        <li>insert in the "Target Vocabularies" sheet the description of the target Core Data Model.</li>
-        <li>insert in the "Mappings" sheet the mapping between the Core Vocabulary and the taregt Core Data Model</li>
-        <li>submit the document to XXX</li>
-      </ol>
-  </P>
-  <P>After submission the document will be iterative refined in collaboration
-  </P>
-  
-</section>
+
 
 <section id="registry">
   <h2>Browse the mappings</h2>
@@ -93,7 +80,8 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
   </ul>
 </section>
   <section id="search">
-  <p>Or use the box below to search the Core Vocabulary Mapping Directory.</p>
+  <p>Use the box below to search the Core Vocabulary Mapping Directory.</p>
+  <p>It searches within the labels and definitions of the available concepts for a match</p>
 
   <div>
     <form id="searchform">
@@ -102,6 +90,25 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
     </form>
   </div>
   <div id="results"></div>
+</section>
+
+<section id="creation">
+  <h2>Creating a mapping</h2>
+  <P>
+  Contributing information to the Core Vocabulary Mapping Directory starts from providing 
+  a mapping of between the Core Vocabularies and the newly targeted Core Data Model.
+  </P>
+  <P>This consists of four steps
+      <ol>
+        <li>download the mapping template document <a href="xxx">here</a>. </li>
+        <li>insert in the "Target Vocabularies" sheet the description of the target Core Data Model.</li>
+        <li>insert in the "Mappings" sheet the mapping between the Core Vocabulary and the taregt Core Data Model</li>
+        <li>submit the document to XXX</li>
+      </ol>
+  </P>
+  <P>After submission the document will be iterative refined in collaboration
+  </P>
+  
 </section>
 
 <footer>
