--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -61,6 +61,14 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
 				<ul>
 					<li><a href="http://vocabs.tenforce.com/vdm/about/html/dcfce6b9b80785dd9ab8643040bcb443">NIEM 3.0</a></li>
 					<li><a href="http://vocabs.tenforce.com/vdm/about/html/2e68deedd01558073d0c81ae7e50710c">Stelselcatalogus</a></li>
+					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/f63126b7756b24674a18627c950debc4">UN/CEFACT CCL 13B</a></li>
+					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/fd73e3df8b3af1f0e7924826d6f8ff4c">MUG- BII</a></li>
+					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/a0c35a8f05b397108f5512bf3e607374">Core Vocabularies RDF Schemas</a></li>
+					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/5253ba2b4c926f6d1bba2dbfd8583dc4">OASIS UBL Common Library 2.1</a></li>
+					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/d9d81d7ce8c968ff9a4c276cc616e9ec">KoSIT - XOV</a></li>
+					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/84e43483add551a8f41765f4e21afc42">Swedish Company data model</a></li>
+					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/eb004434a93bbeaa2ba5968d26af06be"><eIDAS minimum dataset/a></li>
+
 				</ul>
 			</p>
 		</li>
