--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -32,7 +32,7 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
   </P>
   
 <P>
-  <a href="#creation>How to contribute</a> | <a href="#registry">Browse the directory</a> | <a href="#search">Search for concept</a> | <a href="/sparql">SPARQL endpoint</a>
+  <a href="#creation">How to contribute</a> | <a href="#registry">Browse the directory</a> | <a href="#search">Search for concept</a> | <a href="/sparql">SPARQL endpoint</a>
   </P> 
 </section>
 
