--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -17,7 +17,7 @@
       <img src="images/semic_logo.png" alt="SEMIC logo" width="90" height="90" />
     </a>
   </div>
-  <h1>Core Vocabulary Mapping Directory</h1>
+  <h1><a href="/vdm/">Core Vocabulary Mapping Directory</a></h1>
 </header>
 
 <section id="intro">
