--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -31,9 +31,10 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
   Also visit the <a href="https://joinup.ec.europa.eu/asset/core_vocabularies/asset_release/core-vocabularies-v11">Core Vocabularies homepage</a> for more background information.
   </P>
   
-<P>
-  <a href="#creation">How to contribute</a> | <a href="#registry">Browse the directory</a> | <a href="#search">Search for concept</a> | <a href="/sparql">SPARQL endpoint</a>
-  </P> 
+ <h3>
+
+   <a href="#creation">How to contribute</a> | <a href="#registry">Browse the directory</a> | <a href="#search">Search for concept</a> | <a href="/sparql">SPARQL endpoint</a> | <a href="#download">Downloadables</a>
+ </h3> 
 </section>
 
 
@@ -46,7 +47,7 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
     <li><a href="http://vocabs.tenforce.com/vdm/id/cv/0b0cb2485cb9429c5df6ec01d10a3dae">Core Vocabularies</a>,
 			<ul>
 
-				<li><a href="Core_Vocabularies_v1.3.xlsx">Core Vocabularies Mapping Table</a></li>
+				<!-- <li><a href="Core_Vocabularies_v1.3.xlsx">Core Vocabularies Mapping Table</a></li>-->
 				<li>Examples of some entry points are:
 						<ul>
 							<li>the <a href="http://vocabs.tenforce.com/vdm/id/cv/5bc9674db0153b2bc6504561061629f7">Person Family Name</a> property (Core Vocabularies);</li>
@@ -80,11 +81,13 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
 					<a href="visualisation/tree.html">Tree Visualisation 
 						of the DCAT/ODS mapping</a>
 				</li>
+				<!--
 				<li>
 					<a href="DCatVocabularies-v0.1.xlsx">DCat Vocabularies Mapping Table</a></li>
 				<li>
 					<a href="EuroVocmappings_v0.03-1.xlsx">EuroVoc Value Mapping Table</a>
 				</li>
+				-->
 			</ul>
 		</li>
   </ul>
@@ -111,13 +114,24 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
       <ol>
         <li>download the mapping template document <a href="Core_Vocabularies_Mapping_Template.xlsx">Core_Vocabularies_Mapping_Template.xlsx</a>. </li>
         <li>insert in the "Target Vocabularies" sheet the description of the target Core Data Model.</li>
-        <li>insert in the "Mappings" sheet the mapping between the Core Vocabulary and the taregt Core Data Model</li>
+        <li>insert in the "Mappings" sheet the mapping between the Core Vocabulary and the target Core Data Model</li>
         <li>submit the document to XXX</li>
       </ol>
   </P>
   <P>After submission the document will be iterative refined in collaboration
   </P>
   
+</section>
+
+<section  id="download">
+	<h2>Downloadables</h2>
+	<ul>
+    <li>The mapping template document <a href="Core_Vocabularies_Mapping_Template.xlsx">Core_Vocabularies_Mapping_Template.xlsx</a>. </li>
+		<li><a href="Core_Vocabularies_v1.3.xlsx">Core Vocabularies Mapping Table</a></li>
+		<li><a href="DCatVocabularies-v0.1.xlsx">DCat Vocabularies Mapping Table</a></li>
+		<li><a href="EuroVocmappings_v0.03-1.xlsx">EuroVoc Value Mapping Table</a></li>
+
+</ul>
 </section>
 
 <footer>
