small header change

--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -33,7 +33,7 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
   
  <h3>
 
-   <a href="#creation">How to contribute</a> | <a href="#registry">Browse the directory</a> | <a href="#search">Search for concept</a> | <a href="/sparql">SPARQL endpoint</a> | <a href="#download">Downloadables</a>
+   <a href="#creation">How to contribute</a> | <a href="#registry">Browse the directory</a> | <a href="#search">Search for mappings</a> | <a href="/sparql">SPARQL endpoint</a> | <a href="#download">Downloadables</a>
  </h3> 
 </section>
 
